Pass item IDs instead of BaseItemDto between screens
Previously, BaseItemDto objects were serialized to JSON and passed as
fragment arguments to browse destinations, and passed directly to
playback functions. This created an implicit dependency on items having
been fetched with all fields (MediaSources, MediaStreams, Chapters, etc).

Now all inter-screen communication uses item IDs:

Browse destinations:
- Destinations.kt functions accept UUIDs instead of BaseItemDto
- EnhancedBrowseFragment: async fetch via lifecycleScope (non-blocking)
- BrowseFolderFragment: async fetch via lifecycleScope (non-blocking)
- BrowseGridFragment: fetches item by ID in onCreate

Playback initiation:
- ItemLauncher: video play uses retrieveAndPlay(id)
- ItemLauncher: audio play collects UUIDs, uses retrieveAndPlay(List)
- KeyProcessor: 'Add to Queue' re-fetches item by ID first

New files:
- BrowseFragmentHelper.kt: fetchItem() and fetchItemBlocking() utilities,
  launchSetup() for async EnhancedBrowseFragment initialization

This eliminates all paths where heavy BaseItemDto fields could leak
between screens, making it safe to reduce requested fields for
browse/home screen API requests.

Resolves the TODO comments in Destinations.kt:
'only pass item id instead of complete JSON to browsing destinations'